feat miner by id
