# docs/swagger.json
@@ -210,6 +210,29 @@
                 }
             }
         },
+        "/api/v1/miner/{id}": {
+            "get": {
+                "description": "Método para obtener datos del minero",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Miner"
+                ],
+                "summary": "Método para obtener datos del minero",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/miner.ResponseGetMiner"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/participants/info/{wallet}": {
             "get": {
                 "description": "Método para obtener la información de un participante por su wallet id",
@@ -1059,6 +1082,46 @@
                 },
                 "timestamp": {
                     "type": "string"
+                }
+            }
+        },
+        "miner.Miner": {
+            "type": "object",
+            "properties": {
+                "blocks_mined": {
+                    "type": "integer"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "lastname": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "transactions_made": {
+                    "type": "integer"
+                }
+            }
+        },
+        "miner.ResponseGetMiner": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "$ref": "#/definitions/miner.Miner"
+                },
+                "error": {
+                    "type": "boolean"
+                },
+                "msg": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "integer"
                 }
             }
         },
